--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -947,17 +947,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pdf=https://people.eng.unimelb.edu.au/brubinstein/papers/cec01.pdf;alert=Winner of IEEE Computer Society's Lance Stafford Larson Scholarship for best undergraduate student paper worldwide}
 }
 
-@article{Zhou2020early,
-  title={Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
-  year={2020},
-  author={Zhou, Shuo and Bondell, Howard and Tordesillas, Antoinette and Rubinstein, Benjamin I. P. and Bailey, James},
-  journal={Annals of Applied Statistics},
-  volume={14},
-  number={2},
-  pages={977-992},
-  presort={05},
-  rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326}
-}
 
 @article{leins2020tracking,
   title={Tracking, tracing, trust: Contemplating mitigating the impact of COVID-19 through technological interventions},
@@ -979,6 +968,49 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pdf=https://arxiv.org/abs/2006.06963}
 }
 
+@misc{perera2020,
+  title={{DBA} bandits: Self-driving index tuning under ad-hoc, analytical workloads with safety guarantees},
+  author={R. Malinga Perera and Bastian Oetomo and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  note = {arXiv:2010.09208 [cs.DB]},
+  year={2020},
+  month={Oct},
+  presort={04},
+  rmdnote={pdf=https://arxiv.org/abs/2010.09208}
+}
+
+@misc{edwards2020a,
+  title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
+  author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
+  note = {arXiv:2007.05975 [cs.IT]},
+  year={2020},
+  month={Jul},
+  presort={05},
+  rmdnote={pdf=https://arxiv.org/abs/2007.05975}
+}
+
+@article{Zhou2020early,
+  title={Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
+  year={2020},
+  author={Zhou, Shuo and Bondell, Howard and Tordesillas, Antoinette and Rubinstein, Benjamin I. P. and Bailey, James},
+  journal={Annals of Applied Statistics},
+  volume={14},
+  number={2},
+  pages={977-992},
+  presort={06},
+  rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326}
+}
+
+@inproceedings{liu2020legionb,
+  title={Legion: Best-First Concolic Testing},
+  year={2020},
+  author={Liu, Dongge and Ernst, Gidon and Murray, Toby and Rubinstein, Benjamin I. P.},
+  booktitle={The 35th IEEE/ACM International Conference on Automated Software Engineering},
+  series={ASE},
+  note={Accepted},
+  presort={07},
+  rmdnote={code=https://github.com/Alan32Liu/Legion}
+}
+
 @inproceedings{liu2020legion,
   title={Legion: Best-First Concolic Testing},
   year={2020},
@@ -987,7 +1019,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={FASE},
   note={Test-Comp session},
   pages={545--549},
-  presort={07},
+  presort={08},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
 }
 
@@ -999,7 +1031,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Databases Theory and Applications},
   series={ADC},
   note={31st Australasian Database Conference},
-  presort={08},
+  presort={09},
   pages={68--80},
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
@@ -1011,7 +1043,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
   series={PAKDD},
   pages={152--163},
-  presort={09},
+  presort={10},
   rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12}
 }
 
@@ -1022,7 +1054,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2020 International Joint Conference on Neural Networks},
   series={IJCNN},
   note={To appear},
-  presort={10}
+  presort={11}
 }
 
 @misc{zhang2020improving,
@@ -1031,7 +1063,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.15417 [cs.CV]},
   year={2020},
   month={Jun},
-  presort={11},
+  presort={12},
   rmdnote={pdf=https://arxiv.org/abs/2006.15417}
 }
 
@@ -1041,27 +1073,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.13120 [cs.LG]},
   year={2020},
   month={Jun},
-  presort={12},
+  presort={13},
   rmdnote={pdf=https://arxiv.org/abs/2006.13120}
-}
-
-@misc{edwards2020a,
-  title={A Graph Symmetrisation Bound on Channel Information Leakage under Blowfish Privacy},
-  author={Tobias Edwards and Benjamin I. P. Rubinstein and Zuhe Zhang and Sanming Zhou},
-  note = {arXiv:2007.05975 [cs.IT]},
-  year={2020},
-  month={Jul},
-  presort={04},
-  rmdnote={pdf=https://arxiv.org/abs/2007.05975}
-}
-
-@inproceedings{liu2020legionb,
-  title={Legion: Best-First Concolic Testing},
-  year={2020},
-  author={Liu, Dongge and Ernst, Gidon and Murray, Toby and Rubinstein, Benjamin I. P.},
-  booktitle={The 35th IEEE/ACM International Conference on Automated Software Engineering},
-  series={ASE},
-  note={Accepted},
-  presort={06},
-  rmdnote={code=https://github.com/Alan32Liu/Legion}
 }
