--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -988,6 +988,16 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pdf=https://arxiv.org/abs/2007.05975}
 }
 
+@misc{xu2020a,
+  title={Targeted Poisoning Attacks on Black-Box Neural Machine Translation},
+  author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
+  note = {arXiv:2011.00675 [cs.CL]},
+  year={2020},
+  month={Oct},
+  presort={06},
+  rmdnote={pdf=https://arxiv.org/abs/2011.00675}
+}
+
 @article{Zhou2020early,
   title={Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
   year={2020},
@@ -996,7 +1006,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   volume={14},
   number={2},
   pages={977-992},
-  presort={06},
+  presort={07},
   rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326}
 }
 
@@ -1007,7 +1017,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={The 35th IEEE/ACM International Conference on Automated Software Engineering},
   series={ASE},
   note={Accepted},
-  presort={07},
+  presort={08},
   rmdnote={code=https://github.com/Alan32Liu/Legion}
 }
 
@@ -1019,7 +1029,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={FASE},
   note={Test-Comp session},
   pages={545--549},
-  presort={08},
+  presort={09},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
 }
 
@@ -1031,7 +1041,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Databases Theory and Applications},
   series={ADC},
   note={31st Australasian Database Conference},
-  presort={09},
+  presort={10},
   pages={68--80},
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
@@ -1043,7 +1053,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
   series={PAKDD},
   pages={152--163},
-  presort={10},
+  presort={11},
   rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12}
 }
 
@@ -1054,7 +1064,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2020 International Joint Conference on Neural Networks},
   series={IJCNN},
   note={To appear},
-  presort={11}
+  presort={12}
 }
 
 @misc{zhang2020improving,
@@ -1063,7 +1073,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.15417 [cs.CV]},
   year={2020},
   month={Jun},
-  presort={12},
+  presort={13},
   rmdnote={pdf=https://arxiv.org/abs/2006.15417}
 }
 
@@ -1073,6 +1083,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.13120 [cs.LG]},
   year={2020},
   month={Jun},
-  presort={13},
+  presort={14},
   rmdnote={pdf=https://arxiv.org/abs/2006.13120}
 }
