--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -958,14 +958,34 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pub=https://doi.org/10.5694/mja2.50669}
 }
 
+@misc{culnane2020a,
+  title={Not fit for Purpose: A critical analysis of the 'Five Safes'},
+  author={Chris Culnane and Benjamin I. P. Rubinstein and David Watts},
+  note = {arXiv:2011.02142 [cs.CR]},
+  year={2020},
+  month={Nov},
+  presort={03},
+  rmdnote={pdf=https://arxiv.org/abs/2011.02142}
+}
+
 @misc{marchant2020a,
   title={A general framework for label-efficient online evaluation with asymptotic guarantees},
   author={Neil G. Marchant and Benjamin I. P. Rubinstein},
   note = {arXiv:2006.06963 [cs.LG]},
   year={2020},
   month={Jun},
-  presort={03},
+  presort={04},
   rmdnote={pdf=https://arxiv.org/abs/2006.06963}
+}
+
+@misc{xu2020a,
+  title={Targeted Poisoning Attacks on Black-Box Neural Machine Translation},
+  author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
+  note = {arXiv:2011.00675 [cs.CL]},
+  year={2020},
+  month={Oct},
+  presort={05},
+  rmdnote={pdf=https://arxiv.org/abs/2011.00675}
 }
 
 @misc{perera2020,
@@ -974,7 +994,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2010.09208 [cs.DB]},
   year={2020},
   month={Oct},
-  presort={04},
+  presort={06},
   rmdnote={pdf=https://arxiv.org/abs/2010.09208}
 }
 
@@ -984,18 +1004,8 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2007.05975 [cs.IT]},
   year={2020},
   month={Jul},
-  presort={05},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/abs/2007.05975}
-}
-
-@misc{xu2020a,
-  title={Targeted Poisoning Attacks on Black-Box Neural Machine Translation},
-  author={Chang Xu and Jun Wang and Yuqing Tang and Francisco Guzman and Benjamin I. P. Rubinstein and Trevor Cohn},
-  note = {arXiv:2011.00675 [cs.CL]},
-  year={2020},
-  month={Oct},
-  presort={06},
-  rmdnote={pdf=https://arxiv.org/abs/2011.00675}
 }
 
 @article{Zhou2020early,
@@ -1006,7 +1016,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   volume={14},
   number={2},
   pages={977-992},
-  presort={07},
+  presort={08},
   rmdnote={pub=http://dx.doi.org/10.1214/20-AOAS1326}
 }
 
@@ -1017,7 +1027,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={The 35th IEEE/ACM International Conference on Automated Software Engineering},
   series={ASE},
   note={Accepted},
-  presort={08},
+  presort={09},
   rmdnote={code=https://github.com/Alan32Liu/Legion}
 }
 
@@ -1029,7 +1039,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   series={FASE},
   note={Test-Comp session},
   pages={545--549},
-  presort={09},
+  presort={10},
   rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
 }
 
@@ -1041,7 +1051,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={Databases Theory and Applications},
   series={ADC},
   note={31st Australasian Database Conference},
-  presort={10},
+  presort={11},
   pages={68--80},
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
@@ -1053,7 +1063,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
   series={PAKDD},
   pages={152--163},
-  presort={11},
+  presort={12},
   rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12}
 }
 
@@ -1064,7 +1074,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={2020 International Joint Conference on Neural Networks},
   series={IJCNN},
   note={To appear},
-  presort={12}
+  presort={13}
 }
 
 @misc{zhang2020improving,
@@ -1073,7 +1083,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.15417 [cs.CV]},
   year={2020},
   month={Jun},
-  presort={13},
+  presort={14},
   rmdnote={pdf=https://arxiv.org/abs/2006.15417}
 }
 
@@ -1083,6 +1093,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.13120 [cs.LG]},
   year={2020},
   month={Jun},
-  presort={14},
+  presort={15},
   rmdnote={pdf=https://arxiv.org/abs/2006.13120}
 }
