--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1056,6 +1056,15 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   rmdnote={pub=https://link.springer.com/book/10.1007/978-3-030-39469-1;alert=Best Student Paper Honorable Mention}
 }
 
+@misc{yang2020characterizing,
+  title={Characterizing Adversarial Transferability via Gradient Orthogonality and Smoothness},
+  year={2020},
+  author={Yang, Zhuolin and Li, Linyi and Xu, Xiaojun and Zuo, Shiliang and Chen, Qian and Rubinstein, Benjamin and Zhang, Ce and Li, Bo},
+  note={Pre-print presented at ICML'2020 Workshop on Uncertainty \& Robustness in Deep Learning},
+  presort={12},
+  rmdnote={pdf=http://www.gatsby.ucl.ac.uk/~balaji/udl2020/accepted-papers/UDL2020-paper-071.pdf}
+}
+
 @inproceedings{roohi2020assessing,
   title={Assessing Centrality Without Knowing Connections},
   year={2020},
@@ -1063,7 +1072,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   booktitle={24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
   series={PAKDD},
   pages={152--163},
-  presort={12},
+  presort={13},
   rmdnote={full=https://arxiv.org/abs/2005.13787;pub=https://doi.org/10.1007/978-3-030-47436-2_12}
 }
 
@@ -1073,8 +1082,9 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={Han, Yi and Hubczenko, David and Montague, Paul and De Vel, Olivier and Abraham, Tamas and Rubinstein, Benjamin I. P. and Leckie, Christopher and Alpcan, Tansu and Erfani, Sarah},
   booktitle={2020 International Joint Conference on Neural Networks},
   series={IJCNN},
-  note={To appear},
-  presort={13}
+  pages={1--8},
+  presort={14},
+  rmdnote={full=https://arxiv.org/abs/1902.09062;pub=https://ieeexplore.ieee.org/abstract/document/9206634}
 }
 
 @misc{zhang2020improving,
@@ -1083,7 +1093,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.15417 [cs.CV]},
   year={2020},
   month={Jun},
-  presort={14},
+  presort={15},
   rmdnote={pdf=https://arxiv.org/abs/2006.15417}
 }
 
@@ -1093,6 +1103,6 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note = {arXiv:2006.13120 [cs.LG]},
   year={2020},
   month={Jun},
-  presort={15},
+  presort={16},
   rmdnote={pdf=https://arxiv.org/abs/2006.13120}
 }
