--- a/impact.Rmd
+++ b/impact.Rmd
@@ -14,23 +14,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 <br>
 
-## Machine Learning
-
-### Microsoft data linking
-
-<img src="images/leibniz.jpg" style="width:250px; margin-right: 10px; margin-bottom: -10px" align="left"> 
-
-Over 2010--13, I was one of two researchers and a small handful of developers, building a production system for data integration---an application of machine learning in databases that leveraged our research at Microsoft e.g., [[VLDB'12](http://vldb.org/pvldb/vol5/p550_bozhao_vldb2012.pdf)]. The system shipped multiple times internally (resulting in 4x ShipIt! awards for sustained product transfer). Notable applications were to the Bing Search engine across multiple verticals, and the Xbox game console. After the 2011/12 refresh, in which our data integration was a key contribution from Research, Xbox revenue increased by several $100m (due to [increased](http://allthingsd.com/20120510/microsofts-sneaky-success-the-xbox-is-the-most-popular-video-player-in-the-u-s/) [sales](http://allthingsd.com/20120327/xbox-users-clocking-more-hours-gobbling-media-than-gaming-online/) of consoles and Xbox Live subscriptions). Within Microsoft Research, this impact was [attributed](http://www.bing.com/community/site_blogs/b/search/archive/2011/12/08/bing-on-xbox-team-don-t-be-shy-about-talking-to-the-tv.aspx) to our small team. In Bing’s social vertical, our system matched over 1b records daily. I continue to work on data integration at Melbourne.
-
-### Predicting liver transplantation failure
-
-<!--Public domain image source: https://commons.wikimedia.org/wiki/File:Liver.svg-->
-<img src="images/liver.png" style="width:120px; margin-right: 10px; margin-bottom: -10px" align="left"> 
-
-Through 2016 my group with colleague Bailey collaborated with the Austin Hospital's transplantation unit, on predicting outcomes (graft failure) of liver transplantation for Australian demographics. With machine learning-based approaches, PhD student Yamuna Kankanige could improve by over 20% the predictive accuracy of the Donor Risk Index [[Transplantation'17](https://www.ncbi.nlm.nih.gov/pubmed/27941428)]---a risk score widely used by Australian surgeons today, in planning transplants and follow-up interventions.  
-
-_Media coverage:_ [9news](http://www.9news.com.au/health/2017/01/12/12/11/matchmaking-approach-to-liver-transplants), [heraldsun](http://www.heraldsun.com.au/news/victoria/how-dating-site-eharmony-can-help-boost-liver-transplant-success/news-story/eaaf4cc3c859dbd5c38baed5c2b496b0)
-
 ## Privacy \& Security
 
 ### 30yr Medicare/PBS dataset and the Re-identification Criminalisation Bill
@@ -106,6 +89,39 @@ to the stark reality of privacy attacks. Team member Narayanan subsequently [con
 <img src="images/firefox.png" style="width:80px; margin-right: 10px;" align="left"> 
 
 With a Berkeley group led by Dawn Song [[report](http://www.eecs.berkeley.edu/Pubs/TechRpts/2011/EECS-2011-98.html)], I helped improve the security of [Mozilla's](https://www.mozilla.org/) open-source development processes. While open-source projects tend to improve system security through the principle of 'many eyes', Mozilla was publishing security-related commits to the public [Firefox web browser](https://www.mozilla.org/en-US/firefox/) source repository, often a month before those commits would be automatically pushed to users. We trained a learning-based ranker to predict which commits were more likely security-related. An attacker could then easily sift through a few commits by hand to find zero-day exploits, on average a month prior to patching. As a result of our work Mozilla made security-related commits [private](https://www.mozilla.org/en-US/about/governance/policies/security-group/membership/) until they were published as patches.
+
+## Machine Learning
+
+### Microsoft data linking
+
+<img src="images/leibniz.jpg" style="width:250px; margin-right: 10px; margin-bottom: -10px" align="left"> 
+
+Over 2010--13, I was one of two researchers and a small handful of developers, building a production system for data integration---an application of machine learning in databases that leveraged our research at Microsoft e.g., [[VLDB'12](http://vldb.org/pvldb/vol5/p550_bozhao_vldb2012.pdf)]. The system shipped multiple times internally (resulting in 4x ShipIt! awards for sustained product transfer). Notable applications were to the Bing Search engine across multiple verticals, and the Xbox game console. After the 2011/12 refresh, in which our data integration was a key contribution from Research, Xbox revenue increased by several $100m (due to [increased](http://allthingsd.com/20120510/microsofts-sneaky-success-the-xbox-is-the-most-popular-video-player-in-the-u-s/) [sales](http://allthingsd.com/20120327/xbox-users-clocking-more-hours-gobbling-media-than-gaming-online/) of consoles and Xbox Live subscriptions). Within Microsoft Research, this impact was [attributed](http://www.bing.com/community/site_blogs/b/search/archive/2011/12/08/bing-on-xbox-team-don-t-be-shy-about-talking-to-the-tv.aspx) to our small team. In Bing’s social vertical, our system matched over 1b records daily. I continue to work on data integration at Melbourne.
+
+### Predicting liver transplantation failure
+
+<!--Public domain image source: https://commons.wikimedia.org/wiki/File:Liver.svg-->
+<img src="images/liver.png" style="width:120px; margin-right: 10px; margin-bottom: -10px" align="left"> 
+
+Through 2016 my group with colleague Bailey collaborated with the Austin Hospital's transplantation unit, on predicting outcomes (graft failure) of liver transplantation for Australian demographics. With machine learning-based approaches, PhD student Yamuna Kankanige could improve by over 20% the predictive accuracy of the Donor Risk Index [[Transplantation'17](https://www.ncbi.nlm.nih.gov/pubmed/27941428)]---a risk score widely used by Australian surgeons today, in planning transplants and follow-up interventions.  
+
+_Media coverage:_ [9news](http://www.9news.com.au/health/2017/01/12/12/11/matchmaking-approach-to-liver-transplants), [heraldsun](http://www.heraldsun.com.au/news/victoria/how-dating-site-eharmony-can-help-boost-liver-transplant-success/news-story/eaaf4cc3c859dbd5c38baed5c2b496b0)
+
+## Policy Submissions
+
+I have contributed submissions to a range of policy and legislation consultations and inquiries run by government departments and agencies. These responses highlight challenges and best-practice solutions in data privacy and AI.
+
+```{r submissions, echo=FALSE, results="asis"}
+SUBS <- read.csv("submissions/submissions.csv")
+for (i in seq(from=1,to=nrow(SUBS))) {
+  cat("\n* ")
+  cat(SUBS[i,"Authors"])
+  cat(". [", SUBS[i,"Submission"], "](submissions/", SUBS[i,"File"], ")", sep="")
+  cat(" in response to ")
+  cat("[", SUBS[i,"Consultation"], "](", SUBS[i,"URL"], "), ", SUBS[i,"Organisation"], sep="")
+  cat(", ", SUBS[i,"Date"], ".", sep="")
+}
+```
 
 ## Funding & Awards
 
