--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1026,9 +1026,9 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   author={Liu, Dongge and Ernst, Gidon and Murray, Toby and Rubinstein, Benjamin I. P.},
   booktitle={The 35th IEEE/ACM International Conference on Automated Software Engineering},
   series={ASE},
-  note={Accepted},
   presort={09},
-  rmdnote={code=https://github.com/Alan32Liu/Legion}
+  note={Accepted},
+  rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311}
 }
 
 @inproceedings{liu2020legion,
@@ -1040,7 +1040,7 @@ rmdnote={pdf=http://auscc.bipr.net/auscc03}
   note={Test-Comp session},
   pages={545--549},
   presort={10},
-  rmdnote={code=https://github.com/Alan32Liu/Legion;pdf=https://arxiv.org/abs/2002.06311;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
+  rmdnote={code=https://github.com/Alan32Liu/Legion;pub=https://link.springer.com/chapter/10.1007/978-3-030-45234-6_31}
 }
 
 
