--- a/impact.Rmd
+++ b/impact.Rmd
@@ -30,47 +30,11 @@ The day after Medicare's retraction, the Attorney General published a plan to [l
 Our [submission to the inquiry](http://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Legal_and_Constitutional_Affairs/PrivacyReidentification/Submissions) achieved significant impact, being directly quoted 9 times in the Senate Committee’s final report. 
 We wrote an [Op-Ed](http://www.smh.com.au/national/public-service/can-the-government-really-protect-your-privacy-when-it-deidentifies-public-data-20161204-gt3nny.html) in the Sydney Morning Herald clearly explaining [why](https://pursuit.unimelb.edu.au/articles/crime-and-privacy-in-open-data) criminalising reidentification would do more harm than good. Since then we have made several related submissions, including to the: [Data Sharing and Release Consultation 2018](https://www.pmc.gov.au/public-data/data-sharing-and-release-reforms/submissions) (file 20697), [Parliamentary Inquiry into the My Health Record System 2018](https://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Community_Affairs/MyHealthRecordsystem/Submissions) (submission #59), [ACCC Consumer Data Right draft rules 2019](https://www.accc.gov.au/focus-areas/consumer-data-right-cdr-0/cdr-draft-rules-banking).
 
-_Media coverage (2016):_ [zdnet](http://www.zdnet.com/article/brandis-swings-his-golden-hammer-misses-mark/) ([again](http://www.zdnet.com/article/brandis-re-identification-law-proposal-slammed/)),
-[The Register](http://www.theregister.co.uk/2016/09/29/researchers_crack_oz_govt_medical_data_in_easy_basic_pc_attack/),
-[itnews](http://www.itnews.com.au/news/health-pulls-medicare-dataset-after-breach-of-doctor-details-438463) 
-([again](http://www.itnews.com.au/news/brandis-says-white-hats-will-be-exempt-from-data-law-changes-438496)), 
-[ABS news](http://www.abc.net.au/news/2016-09-29/medicare-pbs-dataset-pulled-over-encryption-concerns/7888686), 
-[The Guardian](https://www.theguardian.com/world/2016/sep/29/george-brandis-to-criminalise-re-identifying-published-government-data), 
-[The Age](http://www.theage.com.au/national/public-service/privacy-watchdog-called-after-health-department-data-breach-20160929-grr2m1.html), 
-[CSO](http://www.cso.com.au/article/607712/telstra-defensive-reverse-engineering-medicare-data-highlights-healthcare-security-risks/), 
-[HuffPo](http://www.huffingtonpost.com.au/2016/09/28/privacy-commissioner-to-investigate-medicare-data-breach/), 
-[Canberra Times](http://www.canberratimes.com.au/national/public-service/government-appoints-information-watchdog-timothy-pilgrim-but-no-one-to-fill-top-privacy-foi-jobs-20160928-grqm9j.html), 
-[Crickey](https://www.crikey.com.au/2016/09/29/keane-is-brandis-closing-the-door-on-white-hat-hackers/), 
-[ComputerWorld](http://www.computerworld.com.au/article/607708/will-privacy-act-changes-chilling-effect-cyber-security-research/), 
-[Gizmodo](http://www.gizmodo.com.au/2016/09/aussie-medicare-data-taken-offline-after-potential-breach-noticed/), 
-[Digital Rights Watch](http://digitalrightswatch.org.au/2016/09/29/concerns-around-proposed-amendments-to-privacy-act/), 
-[The Saturday Paper](https://www.thesaturdaypaper.com.au/news/politics/2016/10/08/millions-australians-caught-health-records-breach/14758452003833)  
-_Media coverage (2017 exceeding 1m views):_ 
-[ABC](http://www.abc.net.au/news/science/2017-12-18/anonymous-medicare-data-can-identify-patients-researchers-say/9267684), 
-[Sydney Morning Herald](http://www.smh.com.au/technology/innovation/australians-health-records-unwittingly-exposed-20171218-p4yxt2.html), 
-[IT News](https://www.itnews.com.au/news/health-open-data-bungle-meant-aussies-could-be-identified-480010), 
-[ZdNet](http://www.zdnet.com/article/re-identification-possible-with-australian-de-identified-medicare-and-pbs-open-data/), 
-[The Register](https://www.theregister.co.uk/2017/12/18/no_hack_needed_anonymisation_beaten_with_a_dash_of_sql/), 
-[SBS News](https://www.sbs.com.au/news/retracted-health-records-can-be-used-to-re-identify-patients-study), 
-[Business Insider](https://www.businessinsider.com.au/researchers-claim-private-health-records-of-millions-of-australians-were-exposed-2017-12), 
-[News.com.au](http://www.news.com.au/technology/online/security/one-in-10-australians-health-records-exposed-in-department-data-blunder/news-story/bd78435619d694d373f52634d5afa950?utm_content=SocialFlow&amp;utm_campaign=EditorialSF&amp;utm_source=News.com.au&amp;utm_medium=Twitter), 
-[Daily Telegraph](https://www.dailytelegraph.com.au/technology/one-in-10-australians-health-records-exposed-in-department-data-blunder/news-story/bd78435619d694d373f52634d5afa950), 
-[Brisbane Times](https://www.brisbanetimes.com.au/technology/australians-health-records-unwittingly-exposed-20171218-p4yxt2.html), 
-[Computer World](https://www.computerworld.com.au/article/631356/greens-call-limits-open-data/?utm_medium=rss&amp;utm_source=googlenewseditorspickfeed), 
-[LifeHacker](https://www.lifehacker.com.au/2017/12/confidential-medical-information-can-be-exposed/), 
-[BoingBoing](https://boingboing.net/2017/12/21/encryption-attacks.html),
-[Northern Star](http://www.northernstar.com.au/news/one-in-10-australians-health-records-exposed-in-de/3293358/), 
-[BuzzFeed](https://www.buzzfeed.com/ginarushton/your-medical-records-could-have-been-exposed-in-a-health?utm_term=.ahAm0J2mX#.jl3PWlAP6)
-
-_Media coverage (onwards):_ [itnews](https://www.itnews.com.au/news/easily-re-identified-anonymised-data-threatens-privacy-528657?utm_source=desktop&utm_medium=twitter&utm_campaign=share) 
-
 ### Technical privacy assessments: ABS, ONS, Opal
 
 <img src="images/laplace.png" style="width:200px; margin-right: 10px;" align="left"> 
 
 Also with colleagues Culnane and Teague since 2016, I have contributed towards several technical privacy assessments of government data initiatives. Contracted by the [Australian Bureau of Statistics](http://www.abs.gov.au/) (ABS), we have [analysed the privacy](https://arxiv.org/abs/1802.07975) of several options for name encoding for private record linkage---as might be used for Australian Census data for example. For [Transport for NSW](https://www.transport.nsw.gov.au/), we have performed a technical [privacy assessment](https://arxiv.org/abs/1704.08547) of a Data61-processed dataset of Opal transport card bus, train, ferry touch ons/offs again under contract. The data has subsequently been published. We have also discovered vulnerabilities in the hashing methodology published by the [UK Office of National Statistics](https://www.ons.gov.uk/) in a third [privacy assessment](https://arxiv.org/abs/1712.00871) (explained [here](https://pursuit.unimelb.edu.au/articles/how-small-details-can-create-a-big-problem)). Common themes to this work are reflected in our 2018 [report](https://ovic.vic.gov.au/resource/protecting-unit-record-level-personal-information/) for the [Office of the Victorian Information Commissioner](https://www.cpdp.vic.gov.au).
-
-_Media coverage (2018):_ [Mandarin](https://www.themandarin.com.au/92713-vic-privacy-commissioner-publishing-de-identified-citizen-records-is-a-risky-enterprise/)
 
 ### Promoting privacy through cheating at Kaggle
 
@@ -105,7 +69,66 @@ Over 2010--13, I was one of two researchers and a small handful of developers, b
 
 Through 2016 my group with colleague Bailey collaborated with the Austin Hospital's transplantation unit, on predicting outcomes (graft failure) of liver transplantation for Australian demographics. With machine learning-based approaches, PhD student Yamuna Kankanige could improve by over 20% the predictive accuracy of the Donor Risk Index [[Transplantation'17](https://www.ncbi.nlm.nih.gov/pubmed/27941428)]---a risk score widely used by Australian surgeons today, in planning transplants and follow-up interventions.  
 
-_Media coverage:_ [9news](http://www.9news.com.au/health/2017/01/12/12/11/matchmaking-approach-to-liver-transplants), [heraldsun](http://www.heraldsun.com.au/news/victoria/how-dating-site-eharmony-can-help-boost-liver-transplant-success/news-story/eaaf4cc3c859dbd5c38baed5c2b496b0)
+## Media Coverage
+
+* 2020, Australia's COVIDSafe app:
+[ZDNet](https://www.zdnet.com/article/australias-covid-19-trace-tracking-app-still-weeks-away/),
+[The Guardian](https://www.theguardian.com/australia-news/2020/may/15/covid-safe-app-australia-how-download-does-it-work-australian-government-covidsafe-covid19-tracking-downloads#maincontent),
+[The Australian](https://www.theaustralian.com.au/news/push-to-strengthen-privacy-of-proposed-coronavirus-contact-app/news-story/a73a249ec7ad8d6caff12ff4ca75c3ec),
+[SBS News](https://www.sbs.com.au/news/the-feed/privacy-experts-are-concerned-about-the-government-s-coronavirus-tracing-app-here-s-why),
+[Gizmodo](https://www.gizmodo.com.au/2020/04/coronavirus-tracing-app-australia-source-code/),
+[ACS InformationAge](https://ia.acs.org.au/article/2020/apple-and-google-join-forces-to-fight-covid-19.html)
+* 2019 (1m+ views), Reidentification of the Myki transport data release: named a *top-10 story of 2019* by [ComputerWeekly](https://www.computerweekly.com/news/252475676/Top-10-Australia-IT-stories-of-2019), 
+[Australian Financial Review](https://www.afr.com/technology/myki-data-release-found-to-have-breached-privacy-laws-20190815-p52hbo#:~:text=Public%20Transport%20Victoria%20could%20be,and%20their%20travel%20patterns%20discoverable.), 
+[3AW radio](https://www.3aw.com.au/private-myki-data-released-unlawfully-to-the-public/#:~:text=The%20data%20of%20more%20than,to%20a%20%E2%80%9Cdatathon%E2%80%9D%20event.), 
+[ABC Online](https://www.abc.net.au/news/2019-08-15/myki-data-spill-breaches-privacy-for-millions-of-users/11416616), 
+[Guardian Australia](https://www.theguardian.com/australia-news/2019/aug/15/myki-data-release-breached-privacy-laws-and-revealed-travel-histories-including-of-victorian-mp), 
+[9News.com.au](https://www.9news.com.au/national/vic-transport-data-not-anonymous-enough/8852e3d2-9413-4f6c-9ee3-cdd3984c724e), 
+[Canberra Times](https://www.canberratimes.com.au/story/6330850/vic-transport-data-not-anonymous-enough/), 
+[Australian Financial Review](http://online.isentialink.com/afr.com/2019/08/15/59154d7f-5a8f-4f5e-a2ee-2635c060a7ee.html), 
+[ZDNet](https://www.zdnet.com/article/public-transport-victoria-in-breach-of-privacy-act-after-re-identifiable-data-on-over-15m-myki-cards-released/), 
+[Herald Sun](https://www.heraldsun.com.au/news/victoria/information-commissioner-finds-public-transport-victoria-guilty-of-breaching-privacy/news-story/f0074d45770a8dfc58147abee4680caa), 
+[The Age](https://www.theage.com.au/national/victoria/you-can-do-what-you-like-with-the-data-personal-myki-details-exposed-20190815-p52hdc.html), 
+[The Australian](https://www.theaustralian.com.au/business/technology/ptv-breached-privacy-of-myki-users-victorian-privacy-commission/news-story/6d684052b0475878e8f1e8e23a22601c), 
+[The Mandarin](https://www.themandarin.com.au/113920-information-commissioner-slams-transport-privacy-breach-calls-for-victorian-public-sector-training/), and many more
+* 2019, OVIC commissioned book on AI ethics: [The Mandarin](https://www.themandarin.com.au/115118-eight-experts-on-the-risks-and-benefits-of-artificial-intelligence-in-government-and-the-public-sector/)
+* 2018, OVIC commissioned report on de-identification:  [The Mandarin](https://www.themandarin.com.au/92713-vic-privacy-commissioner-publishing-de-identified-citizen-records-is-a-risky-enterprise/)
+* 2018 onwards, Follow-up coverage of the MBS/PBS reidentification: 
+ [itnews](https://www.itnews.com.au/news/easily-re-identified-anonymised-data-threatens-privacy-528657?utm_source=desktop&utm_medium=twitter&utm_campaign=share)
+* 2017, Liver transplantation outcome prediction:  [9news](http://www.9news.com.au/health/2017/01/12/12/11/matchmaking-approach-to-liver-transplants), [heraldsun](http://www.heraldsun.com.au/news/victoria/how-dating-site-eharmony-can-help-boost-liver-transplant-success/news-story/eaaf4cc3c859dbd5c38baed5c2b496b0)
+* 2017 (1m+ views), Further reidentification of the Australian Medicare/Pharmaceutical (MBS/PBS) 10\% release: 
+[ABC](http://www.abc.net.au/news/science/2017-12-18/anonymous-medicare-data-can-identify-patients-researchers-say/9267684), 
+[Sydney Morning Herald](http://www.smh.com.au/technology/innovation/australians-health-records-unwittingly-exposed-20171218-p4yxt2.html), 
+[IT News](https://www.itnews.com.au/news/health-open-data-bungle-meant-aussies-could-be-identified-480010), 
+[ZdNet](http://www.zdnet.com/article/re-identification-possible-with-australian-de-identified-medicare-and-pbs-open-data/), 
+[The Register](https://www.theregister.co.uk/2017/12/18/no_hack_needed_anonymisation_beaten_with_a_dash_of_sql/), 
+[SBS News](https://www.sbs.com.au/news/retracted-health-records-can-be-used-to-re-identify-patients-study), 
+[Business Insider](https://www.businessinsider.com.au/researchers-claim-private-health-records-of-millions-of-australians-were-exposed-2017-12), 
+[News.com.au](http://www.news.com.au/technology/online/security/one-in-10-australians-health-records-exposed-in-department-data-blunder/news-story/bd78435619d694d373f52634d5afa950?utm_content=SocialFlow&amp;utm_campaign=EditorialSF&amp;utm_source=News.com.au&amp;utm_medium=Twitter), 
+[Daily Telegraph](https://www.dailytelegraph.com.au/technology/one-in-10-australians-health-records-exposed-in-department-data-blunder/news-story/bd78435619d694d373f52634d5afa950), 
+[Brisbane Times](https://www.brisbanetimes.com.au/technology/australians-health-records-unwittingly-exposed-20171218-p4yxt2.html), 
+[Computer World](https://www.computerworld.com.au/article/631356/greens-call-limits-open-data/?utm_medium=rss&amp;utm_source=googlenewseditorspickfeed), 
+[LifeHacker](https://www.lifehacker.com.au/2017/12/confidential-medical-information-can-be-exposed/), 
+[BoingBoing](https://boingboing.net/2017/12/21/encryption-attacks.html),
+[Northern Star](http://www.northernstar.com.au/news/one-in-10-australians-health-records-exposed-in-de/3293358/), 
+[BuzzFeed](https://www.buzzfeed.com/ginarushton/your-medical-records-could-have-been-exposed-in-a-health?utm_term=.ahAm0J2mX#.jl3PWlAP6)
+* 2016, Reidentification of the Australian Medicare/Pharmaceutical (MBS/PBS) 10\% release:  [zdnet](http://www.zdnet.com/article/brandis-swings-his-golden-hammer-misses-mark/) ([again](http://www.zdnet.com/article/brandis-re-identification-law-proposal-slammed/)),
+[The Register](http://www.theregister.co.uk/2016/09/29/researchers_crack_oz_govt_medical_data_in_easy_basic_pc_attack/),
+[itnews](http://www.itnews.com.au/news/health-pulls-medicare-dataset-after-breach-of-doctor-details-438463) 
+([again](http://www.itnews.com.au/news/brandis-says-white-hats-will-be-exempt-from-data-law-changes-438496)), 
+[ABS news](http://www.abc.net.au/news/2016-09-29/medicare-pbs-dataset-pulled-over-encryption-concerns/7888686), 
+[The Guardian](https://www.theguardian.com/world/2016/sep/29/george-brandis-to-criminalise-re-identifying-published-government-data), 
+[The Age](http://www.theage.com.au/national/public-service/privacy-watchdog-called-after-health-department-data-breach-20160929-grr2m1.html), 
+[CSO](http://www.cso.com.au/article/607712/telstra-defensive-reverse-engineering-medicare-data-highlights-healthcare-security-risks/), 
+[HuffPo](http://www.huffingtonpost.com.au/2016/09/28/privacy-commissioner-to-investigate-medicare-data-breach/), 
+[Canberra Times](http://www.canberratimes.com.au/national/public-service/government-appoints-information-watchdog-timothy-pilgrim-but-no-one-to-fill-top-privacy-foi-jobs-20160928-grqm9j.html), 
+[Crickey](https://www.crikey.com.au/2016/09/29/keane-is-brandis-closing-the-door-on-white-hat-hackers/), 
+[ComputerWorld](http://www.computerworld.com.au/article/607708/will-privacy-act-changes-chilling-effect-cyber-security-research/), 
+[Gizmodo](http://www.gizmodo.com.au/2016/09/aussie-medicare-data-taken-offline-after-potential-breach-noticed/), 
+[Digital Rights Watch](http://digitalrightswatch.org.au/2016/09/29/concerns-around-proposed-amendments-to-privacy-act/), 
+[The Saturday Paper](https://www.thesaturdaypaper.com.au/news/politics/2016/10/08/millions-australians-caught-health-records-breach/14758452003833)  
+
+Note: view estimates are wildly approximate, sometimes "cumulative" overestimates.
 
 ## Policy Submissions
 
@@ -214,6 +237,17 @@ for (i in seq(from=1,to=nrow(FT))) {
 * Member (2020--), Conference and Journal Ranking Advisory Committee, Computing Research and Education Association of Australasia (CORE).
 * Member (2019--), Methodology Advisory Committee, Australian Bureau of Statistics.
 * Member (2015--), National Committee for Information and Communication Sciences, the Australian Academy of Science.
+
+### Institutional
+
+* Associate Dean Research (2020), Melbourne School of Engineering
+* Member (2019--), School Executive, School of Computing and Information Systems
+* Member (2019--) and Chair (2020), Awards and Prizes Working Group, Melbourne School of Engineering
+* Investigator (2000--), Melbourne Centre for Data Science (MCDS)
+* Community Researcher (2000--), Centre for AI and Digital Ethics (CAIDE), Melbourne Law School
+* Academic Fellow (2016--), Centre for Business Analytics, Melbourne Business School
+
+Many more committees and working groups at departmental, faculty and university levels.
 
 ### Program committees
 
