--- a/impact.Rmd
+++ b/impact.Rmd
@@ -157,8 +157,9 @@ for (i in seq(from=1,to=nrow(SUBS))) {
     } else {
       cat("[", SUBS[i,"Consultation"], "](", SUBS[i,"URL"], ")", sep="")
     }
+    cat(", ")
   }
-  cat(", ", SUBS[i,"Organisation"], sep="")
+  cat(SUBS[i,"Organisation"])
   cat(", ", SUBS[i,"Date"], ".", sep="")
 }
 ```
