--- a/impact.Rmd
+++ b/impact.Rmd
@@ -14,9 +14,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 <br>
 
-## Privacy \& Security
+## Projects
 
-### 30yr Medicare/PBS dataset and the Re-identification Criminalisation Bill
+### 30yr Medicare/PBS dataset re-identification
 
 <!--Public domain image source: https://commons.wikimedia.org/wiki/File:Medicare_brand.svg-->
 <img src="images/medicare.png" style="width:150px; margin-right: 10px; margin-bottom: -10px" align="left"> 
@@ -36,7 +36,7 @@ We wrote an [Op-Ed](http://www.smh.com.au/national/public-service/can-the-govern
 
 Also with colleagues Culnane and Teague since 2016, I have contributed towards several technical privacy assessments of government data initiatives. Contracted by the [Australian Bureau of Statistics](http://www.abs.gov.au/) (ABS), we have [analysed the privacy](https://arxiv.org/abs/1802.07975) of several options for name encoding for private record linkage---as might be used for Australian Census data for example. For [Transport for NSW](https://www.transport.nsw.gov.au/), we have performed a technical [privacy assessment](https://arxiv.org/abs/1704.08547) of a Data61-processed dataset of Opal transport card bus, train, ferry touch ons/offs again under contract. The data has subsequently been published. We have also discovered vulnerabilities in the hashing methodology published by the [UK Office of National Statistics](https://www.ons.gov.uk/) in a third [privacy assessment](https://arxiv.org/abs/1712.00871) (explained [here](https://pursuit.unimelb.edu.au/articles/how-small-details-can-create-a-big-problem)). Common themes to this work are reflected in our 2018 [report](https://ovic.vic.gov.au/resource/protecting-unit-record-level-personal-information/) for the [Office of the Victorian Information Commissioner](https://www.cpdp.vic.gov.au).
 
-### Promoting privacy through cheating at Kaggle
+### Cheating at Kaggle
 
 <img src="images/k.png" style="width:60px; margin-right: 10px;" align="left"> 
 
@@ -47,14 +47,12 @@ end there, having re-identified users. We used it to look up correct test answer
 No privacy breach resulted and contestants remained able to compete. However the result raised awareness for Kaggle,
 to the stark reality of privacy attacks. Team member Narayanan subsequently [consulted](http://randomwalker.info/publications/heritage-health-re-identifiability.pdf) on the privacy of the \$3m Heritage Health Prize dataset.
 
-### Side-channel attacks on Firefox
+### Firefox side-channel
 
 <!--Public domain image source: https://commons.wikimedia.org/wiki/File:Firefox_logo-sospc.name_.png-->
 <img src="images/firefox.png" style="width:80px; margin-right: 10px;" align="left"> 
 
 With a Berkeley group led by Dawn Song [[report](http://www.eecs.berkeley.edu/Pubs/TechRpts/2011/EECS-2011-98.html)], I helped improve the security of [Mozilla's](https://www.mozilla.org/) open-source development processes. While open-source projects tend to improve system security through the principle of 'many eyes', Mozilla was publishing security-related commits to the public [Firefox web browser](https://www.mozilla.org/en-US/firefox/) source repository, often a month before those commits would be automatically pushed to users. We trained a learning-based ranker to predict which commits were more likely security-related. An attacker could then easily sift through a few commits by hand to find zero-day exploits, on average a month prior to patching. As a result of our work Mozilla made security-related commits [private](https://www.mozilla.org/en-US/about/governance/policies/security-group/membership/) until they were published as patches.
-
-## Machine Learning
 
 ### Microsoft data linking
 
@@ -62,7 +60,7 @@ With a Berkeley group led by Dawn Song [[report](http://www.eecs.berkeley.edu/Pu
 
 Over 2010--13, I was one of two researchers and a small handful of developers, building a production system for data integration---an application of machine learning in databases that leveraged our research at Microsoft e.g., [[VLDB'12](http://vldb.org/pvldb/vol5/p550_bozhao_vldb2012.pdf)]. The system shipped multiple times internally (resulting in 4x ShipIt! awards for sustained product transfer). Notable applications were to the Bing Search engine across multiple verticals, and the Xbox game console. After the 2011/12 refresh, in which our data integration was a key contribution from Research, Xbox revenue increased by several $100m (due to [increased](http://allthingsd.com/20120510/microsofts-sneaky-success-the-xbox-is-the-most-popular-video-player-in-the-u-s/) [sales](http://allthingsd.com/20120327/xbox-users-clocking-more-hours-gobbling-media-than-gaming-online/) of consoles and Xbox Live subscriptions). Within Microsoft Research, this impact was [attributed](http://www.bing.com/community/site_blogs/b/search/archive/2011/12/08/bing-on-xbox-team-don-t-be-shy-about-talking-to-the-tv.aspx) to our small team. In Bing’s social vertical, our system matched over 1b records daily. I continue to work on data integration at Melbourne.
 
-### Predicting liver transplantation failure
+### Predicting transplant failure
 
 <!--Public domain image source: https://commons.wikimedia.org/wiki/File:Liver.svg-->
 <img src="images/liver.png" style="width:120px; margin-right: 10px; margin-bottom: -10px" align="left"> 
